# Super_tictactoe_SDL

./: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  bot_8c.html  bot_8c.js  bot__utils_8c.html  bot__utils_8c.js  bot__utils_8h.html  bot__utils_8h.js  bot__utils_8h_source.html  classes.html  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a.js  dir_6425294c249cc3d9e7adb2f34254d0c5.html  dir_6425294c249cc3d9e7adb2f34254d0c5.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68a5e86baee075bf031a6f51afde60e2.html  dir_68a5e86baee075bf031a6f51afde60e2.js  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_9c94e4c3c5ff5c7b3eabcd0118470213.html  dir_9c94e4c3c5ff5c7b3eabcd0118470213.js  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  engine_8c.html  engine_8c.js  engine_8h.html  engine_8h.js  engine_8h_source.html  (+127 more)
.github/workflows/: build-deploy-documentation.yml  cmake-multi-platform.yml  docker-ghpackages-deploy.yml
Super_tictactoe_SDL/: CMakeLists.txt  Dockerfile  README.md
Super_tictactoe_SDL/include/: engine.h  sdl_display.h
Super_tictactoe_SDL/include/utils/: bot_utils.h  gameplay_utils.h
Super_tictactoe_SDL/lib/Unity/: unity.h
Super_tictactoe_SDL/src/: main.c
Super_tictactoe_SDL/src/game_host/: game_hosting.c
Super_tictactoe_SDL/src/gameplay/: gameplay.c
Super_tictactoe_SDL/test/: CMakeLists.txt
Super_tictactoe_SDL/test/bot_test/: bot_test.c
Super_tictactoe_SDL/test/bot_test/include/: bot_test.h
Super_tictactoe_SDL/test/bot_test/src/: test_bot_miejsca_wolne_na_planszy_0.c  test_bot_miejsca_wolne_na_planszy_6.c  test_bot_miejsca_wolne_na_planszy_8.c  test_bot_miejsca_wolne_na_planszy_9.c  test_bot_poprawne_zwrocenie_nr_planszy_0.c  test_bot_poprawne_zwrocenie_nr_planszy_4.c  test_bot_poprawne_zwrocenie_nr_planszy_5.c  test_bot_poprawne_zwrocenie_nr_planszy_6.c  test_bot_poprawne_zwrocenie_nr_planszy_7.c  test_bot_poprawne_zwrocenie_nr_planszy_8.c
Super_tictactoe_SDL/test/engine_test/: engine_test.c
Super_tictactoe_SDL/test/engine_test/src/: sample_test.c
Super_tictactoe_SDL/test/gameplay_test/: gameplay_test.c
Super_tictactoe_SDL/test/gameplay_test/include/: gameplay_test.h
Super_tictactoe_SDL/test/gameplay_test/src/: test_gameplay.c
Super_tictactoe_SDL/test/host_test/src/: sample_test.c
Super_tictactoe_SDL/test/utils_test/: utils_test.c
Super_tictactoe_SDL/utils/: host_utils.c  sdl_utils.c
include/: engine.h  game_bot.h  gameplay.h  sdl_display.h
include/utils/: bot_utils.h  gameplay_utils.h  timer.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+65 more)
src/: main.c
src/engine/: engine.c  sdl_display.c
src/game_bot/: bot.c  bot_main.c
src/gameplay/: gameplay.c
test/: CMakeLists.txt  game_test.c
test/bot_test/: bot_test.c
test/bot_test/include/: bot_test.h
test/bot_test/src/: bot_test0.c  bot_test1.c  bot_test10.c  bot_test11.c  bot_test12.c  bot_test13.c  bot_test14.c  bot_test15.c  bot_test16.c  bot_test17.c  bot_test18.c  bot_test19.c  bot_test2.c  bot_test3.c  bot_test4.c  bot_test5.c  bot_test6.c  bot_test7.c  bot_test8.c  bot_test9.c  sample_test.c  sample_test0.c  sample_test1.c  sample_test10.c  sample_test11.c  sample_test12.c  sample_test13.c  sample_test14.c  sample_test15.c  sample_test16.c  sample_test17.c  sample_test18.c  sample_test19.c  sample_test2.c  sample_test3.c  sample_test4.c  sample_test5.c  sample_test6.c  sample_test7.c  sample_test8.c  (+11 more)
test/gameplay_test/: gameplay_test.c
test/gameplay_test/include/: gameplay_test.h
test/gameplay_test/src/: sample_test.c  test_gameplay.c
test/host_test/: host_test.c
test/utils_test/src/: sample_test.c
utils/: bot_utils.c  engine_utils.c  gameplay_utils.c  sdl_utils.c  timer.c
